--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,8 @@ external-models-server = "external_models_mcp.server:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
